--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+streamlit==1.23.1
 easyocr==1.6.2
 opencv-python==4.7.0.72
-streamlit==1.23.1
+numpy==1.24.3
 pypdf2==3.0.1
 pdf2image==1.16.3
-pandas==2.0.2
-sqlite3==2.6.0
