--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.23.1
 easyocr==1.6.2
-opencv-python-headless==4.7.0.72
+opencv-python-headless==4.7.0.72  # Headless for cloud compatibility
 numpy==1.24.3
 pypdf2==3.0.1
 pdf2image==1.16.3
+python-multipart==0.0.6  # Needed for file uploads
