--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==1.23.1
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==1.13.1+cpu
 easyocr==1.6.2
-opencv-python-headless==4.5.4.60
-numpy==1.21.6
+opencv-python==4.7.0.72
+streamlit==1.23.1
 pypdf2==3.0.1
 pdf2image==1.16.3
-python-multipart==0.0.6
+pandas==2.0.2
