--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-easyocr==1.6.2
-opencv-python==4.7.0.72
-streamlit==1.23.1
-pypdf2==3.0.1
-pdf2image==1.16.3
-pandas==2.0.2
+# easyocr’s latest release doesn't yet officially support 3.13,
+# but we can build from the latest commit, or better:
+# replace easyocr with alternative if it still fails. Try upgrading first:
+easyocr>=1.7.1
+
+opencv-python
+
+streamlit>=1.28.0  # newer streamlit with better Python 3.12+ support
+
+pypdf2
+
+pdf2image
+
+pandas>=2.2.0  # pandas 2.2+ supports Python 3.13 officially
